<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context="com.KevAndz.decordesign.RegisterPromptActivity">
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12"
                android:baselineAligned="false">

                <LinearLayout
                    style="@style/parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/login_shape_bk"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/parent"
                        android:layout_height="798dp"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="@string/login_background"
                        android:scaleType="center" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="351dp"
                android:layout_height="635dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:contentDescription="@string/logo"
                    app:srcCompat="@drawable/logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="412dp"
                    android:layout_marginTop="50dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/headerTextPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="50dp"
                        android:fontFamily="@font/convergence"
                        android:text="@string/register_as"
                        android:textColor="#FCFCFC" />

                    <Button
                        android:id="@+id/registerAsUser"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/selector"
                        android:drawableTop="@drawable/user"
                        android:paddingTop="20dp"
                        android:text="@string/user"
                        android:textColor="#fff" />

                    <Button
                        android:id="@+id/registerAsDesigner"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/selector"
                        android:drawableTop="@drawable/designer"
                        android:paddingTop="20dp"
                        android:text="@string/designer"
                        android:textColor="#fff" />

                </LinearLayout>
            </LinearLayout>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>


