<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.KevAndz.decordesign.SearchDetail"
    tools:showIn="@layout/activity_search_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/nameImageView"
                android:src="@drawable/user"
                style="@style/profileDetailsImage" />

            <TextView
                android:id="@+id/nameDetailText"
                style="@style/profileDetailsTextMain"
                android:layout_toEndOf="@id/nameImageView"
                android:text="Name" />

            <TextView
                android:id="@+id/usernameDetailText"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/nameImageView"
                android:text="Designer"
                android:textStyle="italic" />

        </RelativeLayout>

        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/genderImageView"
                android:src="@drawable/user"
                style="@style/profileDetailsImage" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toEndOf="@id/genderImageView"
                android:text="Gender" />

            <TextView
                android:id="@+id/genderText"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/genderImageView"
                android:text="Male"
                android:textStyle="italic" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/birthDateImageView"
                android:src="@android:drawable/ic_menu_my_calendar"
                style="@style/profileDetailsImage" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toEndOf="@id/birthDateImageView"
                android:text="Birth Date" />

            <TextView
                android:id="@+id/birthText"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/birthDateImageView"
                android:text="0000-00-00"
                android:textStyle="italic" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/mobileImageView"
                android:src="@drawable/ic_phone"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="Mobile"
                android:layout_toEndOf="@id/mobileImageView"
                style="@style/profileDetailsTextMain"/>

            <TextView
                android:id="@+id/profilePhoneText"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/mobileImageView"
                android:text="not set"
                android:textStyle="italic" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />
        <RelativeLayout style="@style/profileDetailsLayout">
            <ImageView
                android:id="@+id/emailImageView"
                android:src="@drawable/ic_email"
                style="@style/profileDetailsImage" />

            <TextView
                android:text="Email"
                android:layout_toEndOf="@id/emailImageView"
                style="@style/profileDetailsTextMain" />

            <TextView
                android:id="@+id/profileEmail"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/emailImageView"
                android:text="not set"
                android:textStyle="italic" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/addressImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/ic_cv" />

                <TextView
                    android:text="@string/curriculum_vitae"
                    android:layout_toEndOf="@id/addressImageView"
                    style="@style/profileDetailsTextMain" />

                <TextView
                    android:id="@+id/click_cv"
                    style="@style/profileDetailsMiniText"
                    android:layout_toEndOf="@id/addressImageView"
                    android:text="@string/not_set"
                    android:textStyle="italic" />
                <ImageView
                    android:id="@+id/CvImageViewGo"
                    style="@style/profileDetailsImage"
                    android:adjustViewBounds="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_rightarrow" />
            </RelativeLayout>
        </LinearLayout>
        <View style="@style/proifleDetailsView" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/galleryRL"
                style="@style/profileDetailsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/galeryImageView"
                    style="@style/profileDetailsImage"
                    android:src="@android:drawable/ic_menu_gallery" />

                <TextView
                    style="@style/profileDetailsTextMain"
                    android:layout_toEndOf="@id/galeryImageView"
                    android:text="Gallery" />

                <TextView
                    android:id="@+id/count_post"
                    style="@style/profileDetailsMiniText"
                    android:layout_toEndOf="@id/galeryImageView"
                    android:text="@string/_0_post_s"
                    android:textStyle="italic" />
                <ImageView
                    android:id="@+id/galeryImageViewGo"
                    style="@style/profileDetailsImage"
                    android:adjustViewBounds="true"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_rightarrow" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>